clang-cl reports "error: reference to 'UUID' is ambiguous" for Windows port https://bugs.webkit.org/show_bug.cgi?id=234696

Reviewed by Yusuke Suzuki.

Including <windows.h> defines `UUID` in the global scope. This
conflicted with "using WTF::UUID;" in <wtf/Forward.h>. For the
workaround, define `UUID` in each namespace that is using it in
<wtf/Forward.h>.

* Source/WTF/wtf/Forward.h:
* Source/WebKit/UIProcess/API/APIUserInitiatedAction.h:
* Source/WebKit/UIProcess/API/C/WKNotificationManager.cpp:
(WKNotificationManagerProviderDidClickNotification_b):

Canonical link: https://commits.webkit.org/263042@main