Source/WebKit/UIProcess/API/APIUserInitiatedAction.h
@@ -43,12 +43,12 @@ public:
     void setConsumed() { m_consumed = true; }
     bool consumed() const { return m_consumed; }
 
-    void setAuthorizationToken(UUID authorizationToken) { m_authorizationToken = authorizationToken; }
-    std::optional<UUID> authorizationToken() const { return m_authorizationToken; }
+    void setAuthorizationToken(WTF::UUID authorizationToken) { m_authorizationToken = authorizationToken; }
+    std::optional<WTF::UUID> authorizationToken() const { return m_authorizationToken; }
 
 private:
     bool m_consumed { false };
-    std::optional<UUID> m_authorizationToken;
+    std::optional<WTF::UUID> m_authorizationToken;
 };
 
 } // namespace API
